# judo

./: .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: README.md  package-lock.json  package.json  svelte.config.js
app/src/: app.html
app/src/lib/: Gallery.svelte  GalleryElement.svelte  GroupedGallery.svelte  SearchBar.svelte  index.js
app/src/routes/: +layout.svelte  +page.md
app/src/routes/feedback/: +page.server.js
app/src/routes/kata/: +layout.svelte  +page.md
app/src/routes/kata/nage-no-kata/: +page.md
app/src/routes/waza/: +layout.svelte  +page.js  +page.md  Gallery.svelte  GalleryImage.svelte  Waza.svelte
app/src/routes/waza/[...name]/: +layout.svelte  +page.js  +page.svelte
app/static/datasets/: nagewaza.csv  waza-translation.csv  waza.csv  waza.json
nginx/: local.conf
notebooks/: 00-video-segment-exploration.ipynb  00-video-to-gif.ipynb  01-video-segment.ipynb  02-video-subtitles.ipynb  03-video-mask-title.ipynb  04-gif-creation.ipynb  05-map-nagewaza-to-gifs.ipynb  06-generate-anki-deck.ipynb  07-kodokan-techniques.ipynb  10-densepose.ipynb
