[tool.poetry]
name = "judo"
version = "0.1.0"
description = ""
authors = ["Anthony Miyaguchi <acmiyaguchi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
opencv-python = "*"
matplotlib = "*"
pandas = "*"
pytesseract = "*"
scipy = "*"
tqdm = "*"
scikit-learn = "*"
umap-learn = "*"
pygifsicle = "^1.0.7"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]
jupyterlab = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
