[tool.poetry]
name = "judo"
version = "0.1.0"
description = ""
authors = ["Anthony Miyaguchi <acmiyaguchi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
opencv-python = "*"
matplotlib = "*"
pandas = "*"
pytesseract = "*"
scipy = "*"
tqdm = "*"
scikit-learn = "*"
umap-learn = "*"
editdistance = "^0.6.2"
genanki = "^0.13.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
jupyterlab = "*"

# https://github.com/python-poetry/poetry/issues/6409#issuecomment-1806770381
[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.group.vision]
optional = true

[tool.poetry.group.vision.dependencies]
torch = [
  {version = "^2.1.0+cu118", source = "pytorch", markers = "sys_platform == 'linux'"},
  {version = "^2.1.0", markers = "sys_platform == 'darwin'"}
]
torchvision = [
  {version = "*", source = "pytorch", markers = "sys_platform == 'linux'"},
  {version = "*", markers = "sys_platform == 'darwin'"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
